wrecks.html: changed

--- a/layouts/_default/wrecks.html
+++ b/layouts/_default/wrecks.html
@@ -24,7 +24,7 @@
         </div><!-- .post-subtitle -->
         {{ end }}
         <div class="post-content">
-          {{ .Content | safeHTML }}
+          {{ .main_content | safeHTML }}
         </div><!-- .post-content -->
       </article><!-- .post -->
 
