wreck.html: changed

--- a/layouts/_default/wreck.html
+++ b/layouts/_default/wreck.html
@@ -24,7 +24,7 @@
         </div><!-- .post-subtitle -->
         {{ end }}
         <div class="post-content">
-          {{ .main_content | safeHTML }}
+          {{ .content | safeHTML }}
         </div><!-- .post-content -->
       </article><!-- .post -->
 
