--- a/layouts/_default/wreck.html
+++ b/layouts/_default/wreck.html
@@ -25,7 +25,10 @@
         {{ end }}
         <div class="post-content">
           {{ $.Params.content | safeHTML }}
-          
+          <div>
+            <section class="photo">
+            </section>
+          <div>
         </div><!-- .post-content -->
       </article><!-- .post -->
 
