wreck.html: changed

--- a/layouts/_default/wreck.html
+++ b/layouts/_default/wreck.html
@@ -28,6 +28,8 @@
           <div>
             <section class="photo">
             </section>
+            <section class="photo">
+            </section>
           <div>
         </div><!-- .post-content -->
       </article><!-- .post -->
