wreck.html: changed

--- a/layouts/_default/wreck.html
+++ b/layouts/_default/wreck.html
@@ -27,8 +27,9 @@
           {{ $.Params.content | safeHTML }}
           <div>
             <section class="photo">
+            Put Photogram link here
             </section>
-            <section class="photo">
+            <section class="survey">
             </section>
           <div>
         </div><!-- .post-content -->
