wreck.html: changed

--- a/layouts/_default/wreck.html
+++ b/layouts/_default/wreck.html
@@ -27,7 +27,7 @@
           {{ $.Params.content | safeHTML }}
           <div>
             <section class="photo">
-            Put Photogram link here
+            TODO - Photogram image and link
             </section>
             <section class="survey">
             </section>
