wreck.html: changed

--- a/layouts/_default/wreck.html
+++ b/layouts/_default/wreck.html
@@ -30,6 +30,7 @@
             TODO - Photogram image and link
             </section>
             <section class="survey">
+            TODO - Survey image and link
             </section>
           <div>
         </div><!-- .post-content -->
