home.html: changed

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -5,7 +5,9 @@
 
   <div id="content" class="site-content">
     <main id="main" class="site-main inner">
-
+      <div class="main-text">
+      
+      </div>
       <div class="post-feed">
         {{ $posts := (.Site.GetPage "section" "/wrecks" ).Pages }}
         {{ $posts_count := $posts | len }}
