--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -6,7 +6,7 @@
   <div id="content" class="site-content">
     <main id="main" class="site-main inner">
       <div class="main-text">
-      
+        {{$.Params.has_more_link true}}
       </div>
       <div class="post-feed">
         {{ $posts := (.Site.GetPage "section" "/wrecks" ).Pages }}
