home.html: changed

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -6,6 +6,7 @@
   <div id="content" class="site-content">
     <main id="main" class="site-main inner">
       <div class="main-text">
+      dsfsdf
         {{.Site.Data.home_page_texts}}
       </div>
       <div class="post-feed">
