home.html: changed

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -2,7 +2,7 @@
 
   {{ $include_dict := dict "Site" .Site "page" . "image" .Site.Data.config.header.background_img }}
   {{ partial "header.html" $include_dict }}
-asdasd
+asdasddf
   <div id="content" class="site-content">
     <main id="main" class="site-main inner">
       <div class="main-text">
